deploy/web-pod-service-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service-lb
  namespace: default
spec:
  selector:
    name: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
