deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.className: "nginx"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  rules:
  - host: "simplek8s.com" 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web-service-lb
            port: 
              number: 80
